
*******************************************************************************
post-2.2 release:

2005-01-31    <layer@HOBART>

	* Makefile: copy 2.2 binaries to cobweb

x2005-01-31    <layer@HOBART>
2.2

	* nfs.cl: change version to 2.2
	* nfs.nsi: use LZMA compressor... wow!

2005-01-26    <layer@HOBART>

	* nfs.nsi: don't use nfs.exe to stop/remove service
	* configure/configform.cl: require :pprint, set right margin for
	  pprinting, which doesn't work in a runtime app because of a bug
	  in lisp

2005-01-25    <layer@HOBART>
2.1.99

	* loadem.cl: add nfs-shared.cl
	* nfs-common.cl: move cleanup-dir to nfs-shared.cl
	* (NEW) nfs-shared.cl -- code shared with configure/;
>>>	  allow UNC pathnames
	* configure/Makefile: use final not prefinal
	* configure/configform.cl: have configform-export-path-on-change
	  return t when we change the value, so the Apply button is
	  active
	* configure/configure.lpr: add ../nfs-shared.cl
	* configure/export.cl: use cleanup-dir in ../nfs-shared.cl

2004-11-02    <layer@HOBART>

	* Makefile: use 7.0 final
	* nfs-common.cl: add *nfs-gc-debug*
	* nfs.cl: move startup announcement and gc-debug stuff here
>>>	* nfs.nsi: bug14783: remove service with NSIS not with nfs.exe
	* configure/Makefile: use 7.0 final
>>>	* configure/configform.bil: "use system portmapper" option
>>>	* configure/configform.cl: gc debugging
	* configure/configure.lpr: automatic changes

2004-09-16    <layer@HOBART>

	* Makefile: update LISPDIR
	* configure/Makefile: update LISPDIR

2004-09-16    <dancy@CANDY2K>

	* Makefiles: Build using 7.0 pre-final.  nfs_source_files list
	updated.  configure_source_files list added.  Added srcdist
	target.

	* bug14795/bug14692: attr.cl/opennfile.cl: Using equal hash table
	instead of eq now.  Switch back to eq when the bug is fixed.

2004-03-03    <dancy@DANCYSOFT>

	* nfs.cl: version 2.1

	* Removed unused defconstants from mountd.cl

>>>	* Use :hiper sockets for all TCP streams for best performance.
